--- a/finimalism7.css
+++ b/finimalism7.css
@@ -3323,6 +3323,10 @@ a[href*="thetvdb.com"] {
   width: 23.75em;
 }
 
+#itemDetailPage .detailImageContainer.padded-left .card:hover {
+	transform: none;
+}
+
 @media (min-width: 3000px) {
 	body {
 		font-size: 200% !important;
