--- a/finimalism7.css
+++ b/finimalism7.css
@@ -2932,9 +2932,6 @@ button[is="paper-icon-button-light"].cardOverlayButton.cardOverlayButton-hover.i
 .headerButton,
 .headerTabs.sectionTabs {
 	pointer-events: all;
-	-webkit-filter: drop-shadow(0px 0px 1.5px rgb(0, 0, 0));
-	filter: drop-shadow(0px 0px 1.5px rgb(0, 0, 0));
-	color: #fff;
 }
 
 .collectionItems {
@@ -3232,6 +3229,23 @@ a[href*="thetvdb.com"] {
     font-size: 0;
 }
 
+/* TVMaze link replaced with logo */
+a[href*="tvmaze.com"]::before {
+    content: "";
+    display: inline-block;
+    width: 50px;
+    height: 25px;
+    background-image: url('https://i.imgur.com/sd2al6G.png');
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin-right: 5px;
+    vertical-align: middle;
+}
+
+a[href*="tvmaze.com"] {
+    font-size: 0;
+}
+
 .itemExternalLinks.focuscontainer-x {
 	color: #000a;
 }
@@ -3307,7 +3321,10 @@ a[href*="thetvdb.com"] {
 	background: #29264a !important;
 }
 
+/* D-E-N-U's title fix */ 
 .layout-desktop .itemName.infoText.parentNameLast,
+.layout-desktop .itemName.infoText.subtitle,
+.layout-tv .itemName.infoText.subtitle,
 .layout-tv .itemName.infoText.parentNameLast {
   display: -webkit-box !important;
   -webkit-box-orient: vertical;
@@ -3318,6 +3335,7 @@ a[href*="thetvdb.com"] {
 }
 
 .layout-desktop .itemName.infoText.originalTitle,
+.layout-desktop .itemName.infoText.subtitle,
 .layout-tv .itemName.infoText.originalTitle {
   position: absolute;
   top: 6em;
