--- a/finimalism-just-black.css
+++ b/finimalism-just-black.css
@@ -5,7 +5,7 @@
     background: url(https://i.imgur.com/gpe0jJc.jpeg) center top no-repeat #030322;
     -webkit-background-size: cover;
     background-size: cover;
-	opacity: 0.5;
+	opacity: 0;
 }
 
 .itemsContainer.padded-left {
@@ -81,12 +81,13 @@
 
 /*Glow accent on hover*/
 .raised.homeLibraryButton {
-	box-shadow: 0px 0px 5px rgb(255, 255, 255) !important;
+	box-shadow: 0px 0px 1px rgb(255, 255, 255) !important;
 	border: solid 1px rgba(var(--accent),0) !important;
 }
 
-.raised.homeLibraryButton:hover,.emby-tab-button:hover, .selectLabelFocused, .inputLabelFocused, .textareaLabelFocused, .buttonActive, .button-link {
+.raised.homeLibraryButton:hover,.emby-tab-button:hover, .textareaLabelFocused, .buttonActive {
 	color: rgb(0, 0, 0) !important;
+	box-shadow: 0px 0px 5px rgb(255, 255, 255) !important
 }
 
 .button-flat:hover, .paper-icon-button-light:hover { 
@@ -96,6 +97,25 @@
 .cardOverlayContainer:hover, .dialog, .toast, .raised.homeLibraryButton:hover {
 	box-shadow: 0px 0px 5px rgb(255, 255, 255);
 	border: solid 1px rgba(var(--accent),0);
+}
+
+.mainDrawer-scrollContainer.scrollContainer .navMenuOption:hover, .mainDrawer-scrollContainer.scrollContainer .navMenuOption:hover emby-button, button.is-emby-button:hover emby-button {
+  background: linear-gradient(194deg, rgb(43.529% 43.529% 43.529%) 0%, rgb(53.47% 53.47% 53.47%) 6.25%, rgb(62.169% 62.169% 62.169%) 12.5%, rgb(69.71% 69.71% 69.71%) 18.75%, rgb(76.176% 76.176% 76.176%) 25%, rgb(81.65% 81.65% 81.65%) 31.25%, rgb(86.213% 86.213% 86.213%) 37.5%, rgb(89.949% 89.949% 89.949%) 43.75%, rgb(92.941% 92.941% 92.941%) 50%, rgb(95.271% 95.271% 95.271%) 56.25%, rgb(97.022% 97.022% 97.022%) 62.5%, rgb(98.277% 98.277% 98.277%) 68.75%, rgb(99.118% 99.118% 99.118%) 75%, rgb(99.628% 99.628% 99.628%) 81.25%, rgb(99.89% 99.89% 99.89%) 87.5%, rgb(99.986% 99.986% 99.986%) 93.75%, rgb(100% 100% 100%) 100% ) !important;
+  transition: background 0.3s ease;
+  color: #000 !important;
+}
+
+.mainDrawer-scrollContainer.scrollContainer .navMenuOption:hover .navMenuOptionText {
+  color: #000 !important;
+}
+
+.emby-select-withcolor > option {
+  color: inherit;
+  background: #000;
+}
+
+.layout-desktop .mainDetailButtons.focuscontainer-x .button-flat:hover, .layout-tv .mainDetailButtons.focuscontainer-x .button-flat:focus {
+  background: #404040 !important;
 }
 
 .innerCardFooter, .countIndicator, .playedIndicator {
