--- a/finimalism-just-black.css
+++ b/finimalism-just-black.css
@@ -124,12 +124,37 @@
 	color: rgb(--accent);
 }
 
+.headerTabs.sectionTabs:hover .emby-button {
+	color: #fff !important;
+	box-shadow: none !important;
+}
+
 /*Login background*/
 #loginPage {
   background: url(https://i.imgur.com/gpe0jJc.jpeg) !important; 
   background-size: cover !important;
 }
 
+.preload {
+	background-color: #000!important;
+}
+
+.pageTabContent.is-active::before {
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: url(https://i.imgur.com/gpe0jJc.jpeg) center top no-repeat #030322;
+    background-attachment: scroll;
+    background-size: auto;
+  background-size: cover;
+  opacity: 0.925;
+  filter: brightness(90%);
+  z-index: -1;
+  background-attachment: fixed;
+}
 .layout-desktop .mainDetailButtons.focuscontainer-x {
   background: #0a0a0ad6;
 }
