--- a/finimalism-just-black.css
+++ b/finimalism-just-black.css
@@ -87,7 +87,7 @@
 
 .raised.homeLibraryButton:hover,.emby-tab-button:hover, .textareaLabelFocused, .buttonActive {
 	color: rgb(0, 0, 0) !important;
-	box-shadow: 0px 0px 5px rgb(255, 255, 255) !important
+	box-shadow: 0px 0px 5px rgb(255, 255, 255) !important;
 }
 
 .button-flat:hover, .paper-icon-button-light:hover { 
@@ -100,9 +100,25 @@
 }
 
 .mainDrawer-scrollContainer.scrollContainer .navMenuOption:hover, .mainDrawer-scrollContainer.scrollContainer .navMenuOption:hover emby-button, button.is-emby-button:hover emby-button {
-  background: linear-gradient(194deg, rgb(43.529% 43.529% 43.529%) 0%, rgb(53.47% 53.47% 53.47%) 6.25%, rgb(62.169% 62.169% 62.169%) 12.5%, rgb(69.71% 69.71% 69.71%) 18.75%, rgb(76.176% 76.176% 76.176%) 25%, rgb(81.65% 81.65% 81.65%) 31.25%, rgb(86.213% 86.213% 86.213%) 37.5%, rgb(89.949% 89.949% 89.949%) 43.75%, rgb(92.941% 92.941% 92.941%) 50%, rgb(95.271% 95.271% 95.271%) 56.25%, rgb(97.022% 97.022% 97.022%) 62.5%, rgb(98.277% 98.277% 98.277%) 68.75%, rgb(99.118% 99.118% 99.118%) 75%, rgb(99.628% 99.628% 99.628%) 81.25%, rgb(99.89% 99.89% 99.89%) 87.5%, rgb(99.986% 99.986% 99.986%) 93.75%, rgb(100% 100% 100%) 100% ) !important;
+  background: #fff !important;
+  transition: background 0 !important;
+  color: #000 !important;
+}
+
+#myPreferencesMenuPage .verticalSection-extrabottompadding .emby-button:hover,
+#myPreferencesMenuPage .verticalSection-extrabottompadding .emby-button .listItemBody:hover,
+#myPreferencesMenuPage .verticalSection-extrabottompadding .emby-button .listItem:hover {
+  background: #fff !important;
   transition: background 0.3s ease;
   color: #000 !important;
+}
+
+#myPreferencesMenuPage .verticalSection-extrabottompadding .emby-button:hover .listItemBodyText {
+  color: black !important;
+}
+
+.verticalSection-extrabottompadding .emby-button {
+	transition: background 0.3s ease;
 }
 
 .mainDrawer-scrollContainer.scrollContainer .navMenuOption:hover .navMenuOptionText {
