--- a/finimalism-just-black.css
+++ b/finimalism-just-black.css
@@ -2,7 +2,7 @@
 
 /* Backdrop */
 .backgroundContainer {
-    background: url(https://i.imgur.com/gpe0jJc.jpeg) center top no-repeat #030322;
+    background: #000;
     -webkit-background-size: cover;
     background-size: cover;
 	opacity: 0;
@@ -20,25 +20,14 @@
     left: 0;
     width: 100%;
     height: 100vh;
-    background: url(https://i.imgur.com/gpe0jJc.jpeg) center top no-repeat #030322;
     background-size: cover;
-    opacity: 0.8;
+    opacity: 1;
     z-index: -1;
-    background-attachment: fixed;
+    backdrop-filter: saturate(0%) !important;
 }
 
 .sectionTitleContainer.sectionTitleContainer-cards.padded-left::before {
-	content: '';
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100vh;
-	background: url(https://i.imgur.com/gpe0jJc.jpeg) center top no-repeat #030322;
-	background-size: cover;
-	opacity: 0.25;
-	z-index: -1;
-	background-attachment: fixed;
+  backdrop-filter: saturate(0%) !important;
 }
 
 /*Apply bg to detail Ribbon */
@@ -54,7 +43,7 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: url(https://i.imgur.com/gpe0jJc.jpeg) center top no-repeat #030322;
+	background: #000;
 	background-size: cover;
 	opacity: 0.8;
 	z-index: -1;
@@ -73,7 +62,7 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: url(https://i.imgur.com/gpe0jJc.jpeg) center top no-repeat #030322;
+	background: #000;
 	background-size: cover;
 	opacity: 0.9;
 	z-index: -1;
