--- a/finimalism7.css
+++ b/finimalism7.css
@@ -3336,6 +3336,12 @@ a[href*="anidb.net"] {
 	min-width: 20em;
 }
 
+.subtitleSync {
+  position: absolute;
+  width: 100%;
+  margin-top: 4em;
+}
+
 @media (min-width: 3000px) {
 	body {
 		font-size: 200%;
