--- a/finimalism-just-black.css
+++ b/finimalism-just-black.css
@@ -102,6 +102,14 @@
   color: #000 !important;
 }
 
+.listItem:hover .listItemBodyText {
+	color: #000 !important;
+}
+
+.listItem:hover .listItemAside {
+	color: #000d !important;
+}
+
 #myPreferencesMenuPage .verticalSection-extrabottompadding .emby-button:hover .listItemBodyText {
   color: black !important;
 }
